--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhuguohui.demo" >
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name=".api.MyApp"
         android:allowBackup="true"
